# dbt-synthea

./: .dbtignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  DATA_QUALITY.md  README.md  STYLE_GUIDE.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  requirements.txt
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.devcontainer/scripts/: minimal_requirements.txt  postCreate.sh  postStart.sh
.github/workflows/: build.yml  generate-docs.yml  test-dbt-duckdb.yml  update-docs.yml
docs/: overview.md
macros/: check_if_exists.sql  create_source_tables.sql  create_synthea_tables.sql  create_vocab_tables.sql  load_data_duckdb.sql  lowercase_columns.sql  macros.yml  regexp_like.sql  safe_hash.sql  string_truncate.sql  timestamptz_to_naive.sql
macros/generate_dbt_yaml/: _schema.yml  get_equivalent_types.sql
models/: docs_overview.md
models/omop/: _omop__models.yml  care_site.sql  cdm_source.sql  concept.sql  concept_ancestor.sql  concept_class.sql  concept_relationship.sql  concept_synonym.sql  condition_era.sql  condition_occurrence.sql  cost.sql  death.sql  device_exposure.sql  domain.sql  dose_era.sql  drug_era.sql  drug_exposure.sql  drug_strength.sql  episode.sql  episode_event.sql  fact_relationship.sql  location.sql  measurement.sql  metadata.sql  note.sql  note_nlp.sql  observation.sql  observation_period.sql  payer_plan_period.sql  person.sql  procedure_occurrence.sql  provider.sql  relationship.sql  schema.yml  source_to_concept_map.sql  specimen.sql  visit_detail.sql  visit_occurrence.sql  vocabulary.sql
models/staging/: stg__all_visits.sql  stg__assign_all_visit_ids.sql  stg__cost_condition.sql  stg__cost_drug_exposure_1.sql  stg__cost_drug_exposure_2.sql  stg__cost_procedure.sql  stg__drug_immunisations.sql  stg__drug_medications.sql  stg__encounter_provider.sql  stg__er_visits.sql  stg__final_visit_ids.sql  stg__ip_visits.sql  stg__observation_allergies.sql  stg__observation_conditions.sql  stg__observation_observations.sql  stg__op_visits.sql  stg__person.sql
models/synthea/: sources.yml  synthea_allergies.sql  synthea_careplans.sql  synthea_claims.sql  synthea_claims_transactions.sql  synthea_conditions.sql  synthea_devices.sql  synthea_encounters.sql  synthea_imaging_studies.sql  synthea_immunizations.sql  synthea_medications.sql  synthea_observations.sql  synthea_organizations.sql  synthea_patients.sql  synthea_payer_transitions.sql  synthea_payers.sql  synthea_procedures.sql  synthea_providers.sql  synthea_supplies.sql
models/vocab/: concept.sql  concept_ancestor.sql  concept_class.sql  concept_relationship.sql  concept_synonym.sql  domain.sql  relationship.sql  source_to_concept_map.sql  source_to_source_vocab_map.sql  source_to_standard_vocab_map.sql  sources.yml  vocabulary.sql
requirements/: common.in  dev.in  dev.txt  duckdb.in  duckdb.txt  postgres.in  postgres.txt
scripts/R/: etlSyntheaValidation.R
scripts/python/: csv_to_parquet.py  generate_dbt_yaml copy.py  generate_dbt_yaml.py  generate_vocab_shard.py  get_csv_filepaths.py  get_filepaths.py  shard_to_seeds.py
scripts/sql/: compare.sql
seeds/map/: states.csv
seeds/omop/: dose_era.csv  episode.csv  episode_event.csv  fact_relationship.csv  metadata.csv  note.csv  note_nlp.csv  specimen.csv
seeds/stcm/: source_to_concept_map_seed.csv
seeds/synthea/: _sources.yml  allergies.csv  careplans.csv  claims_transactions.csv  conditions.csv  devices.csv  organizations.csv  payers.csv  providers.csv  synthea_encounters.csv  synthea_imaging_studies.csv  synthea_immunizations.csv
seeds/vocabulary/: _sources.yml  concept.csv  concept_ancestor.csv  concept_class.csv  concept_relationship.csv  concept_relationship_seed.csv  concept_synonym_seed.csv  domain.csv  relationship.csv  source_to_concept_map_seed.csv  vocabulary.csv  vocabulary_seed.csv
synthea_omop_etl/: dbt_project.yml
tests/generic/: _schema.yml  person_completeness.sql  (+1 more)
(+104 files in other folders)
